<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tsms.SignUpActivity">


    <!-- Signup progress -->
    <ProgressBar
        android:id="@+id/signup_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorLoginText"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold|normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:textColor="@color/colorLoginText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold|normal"/>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorEditTextBg"
                android:singleLine="true"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorEditTextBg"
                android:textColorHint="@color/colorWhite"/>


            <EditText
                android:id="@+id/c_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:background="@color/colorEditTextBg"
                android:textColorHint="@color/colorWhite"
                android:layout_marginBottom="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_create"
                android:src="@drawable/ic_logo"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorEditTextBg"
                android:text="@string/text_create_txt"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>
