<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.tsms.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorLoginText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold|normal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_logo"
                android:src="@drawable/ic_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:textColor="@color/colorLoginText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold|normal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.3">


                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:textColor="@color/colorWhite"
                            android:textColorHint="@color/colorWhite"
                            android:background="@color/colorEditTextBg"
                            android:singleLine="true"
                            android:layout_marginBottom="10dp"/>

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textColor="@color/colorWhite"
                            android:background="@color/colorEditTextBg"
                            android:textColorHint="@color/colorWhite"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="0.7">

                    <ImageView
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_arrow_login"
                        android:layout_gravity="bottom"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_forgot"
                android:text="@string/text_forgot_txt"
                android:textColor="@color/colorLoginText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold|normal"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_sign_up"
                android:text="@string/text_sigup_txt"
                android:textColor="@color/colorLoginText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold|normal"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
